# Supercharge-AI

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/: CLAUDE.md
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: publish.yml
agents/: code.md  consistency.md  document.md  memory.md  plan.md  research.md  review.md
docs/: architecture.drawio  stack-propagation.md
docs/open-questions/: obsoleting-markdown-references.md
hooks/: hooks.json  session_start.sh
prompts/: agent.md  claude-md.md  directive.md  orchestrator.md  protocol.md  worker.md
scripts/: bump_version.sh
src/agent/: cli.py  flatten.py  hello.py
src/supercharge/: __init__.py  cli.py  hooks.py  memory.py  paths.py  permissions.py  signals.py  workers.py
templates/: index.md  memory-stale-task.md  memory-transcript-task.md  memory.md  notes.md  result.md  task.md  worker.md
tests/: test_agent_definitions.py  test_archive.py  test_bash_permissions.py  test_config_dir.py  test_flatten.py  test_hooks.py  test_lineage.py  test_memory.py  test_workers.py
tests/fixtures/: child.md  main.md
tests/fixtures/nested/: grandchild.md
