[project]
name = "supercharge-ai"
version = "0.1.0"
description = "Python tools and hooks for Claude Code"
authors = [
    { name = "Tom Bukic", email = "tom@ac8.ai" },
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
supercharge-hello = "agent.hello:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent"]

[tool.uv]
# .venv location controlled by UV_PROJECT_ENVIRONMENT at runtime
# to place it in <project_root>/.claude/.venv

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
