[project]
name = "supercharge-ai"
version = "0.2.2"
description = "Multi-agent framework for Claude Code"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Tom Bukic", email = "tom@ac8.ai" },
]
keywords = ["claude-code", "agents", "orchestration", "multi-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]
dependencies = ["click>=8.3", "claude-agent-sdk>=0.1"]

[project.scripts]
supercharge = "supercharge.cli:supercharge"

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/ac8ai/Supercharge-AI"
Repository = "https://github.com/ac8ai/Supercharge-AI"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/supercharge"]

[tool.hatch.build.targets.wheel.force-include]
"prompts" = "supercharge/data/prompts"
"templates" = "supercharge/data/templates"

[tool.uv]
# .venv location controlled by UV_PROJECT_ENVIRONMENT at runtime
# to place it in <project_root>/.claude/.venv

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
